--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -151,7 +151,6 @@ p {
         margin: 0;
     }
 
-    
     #player-choice {
         position: static;
         left: 0;
@@ -186,8 +185,6 @@ p {
     .instructions p {
         font-size: 15px;
         text-align: center;
-        /*margin: 5px 0;
-        padding: 2px 0;*/
         line-height: 20px;  
     }
 
@@ -205,8 +202,6 @@ p {
         width: 100%;
         padding: 5px 0;
     }
-
-    
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -240,13 +235,47 @@ p {
 }
 
 @media only screen and (max-width: 768px) {
-    [class*="col-"] {
-        width: 100%;
+    .container h1{
+        font-size: 20px;
+
+    }
+/*.choices button{
+     font-size: 15px;
+    display: inline-block;
+     width: 15%;
+}*/
+.choices p{
+    font-size: 16px;
+}
+.display-img {
+
+    width: 120px;
+    height: 120px;
+}
+#result {
+    font-size: 20px;
+    padding: 5px 0;
+}
+
+.player{
+width: 50%;
+}
+.computer{
+    width: 50%;
 }
 }
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
+    .display-img {
 
+        width: 150px;
+        height: 150px;
+    }
+    #result {
+        font-size: 15px;
+        width: 100%;
+        padding: 5px 0;
+    }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
