--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -265,25 +265,15 @@ width: 50%;
 }
 }
 /* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
+@media only screen and (orientation: landscape) {
     .display-img {
 
         width: 150px;
         height: 150px;
     }
     #result {
-        font-size: 15px;
+        font-size: 20px;
         width: 100%;
         padding: 5px 0;
     }
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-
 }
