--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,7 +265,7 @@ width: 50%;
 }
 }
 /* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (orientation: landscape) {
+/*@media only screen and (orientation: landscape) {
     .display-img {
 
         width: 150px;
@@ -276,4 +276,4 @@ width: 50%;
         width: 100%;
         padding: 5px 0;
     }
-}
+}*/
