--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,17 @@ body{
     background-color: lightgrey;
     margin: 0px;
     padding: 0px;
+    color: aliceblue;
 }
+#myVideo {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: -5;
+  }
+
 .container{
     text-align: center;
 }
@@ -17,23 +27,45 @@ body{
 
 .choices {
 font-size: 30px;
+padding-bottom: 50px;
+}
+.choice {
+    padding-top: 10px;
+    border-radius: 50%;
+    background-color: white;
+    border: 10px solid;
+    width: 100px;
+    height: 100px;
+    font-size: 3.2rem;
+    margin: 0 30px;
+    transition: all 0.5s;
+    text-transform: uppercase;
+    font-family: "Raleway", sans-serif;
+    letter-spacing: 1.2px;
 }
 
-.choice {
-font-size: 40px;
+.choice::after{
+    content: attr(data-type);
+    font-size: 1rem;
+    color: aliceblue;
+    position: relative;
+    left: -0.5em;
 }
+
 
 
 .player{
    font-size: 20px;
    float: left;
    width: 50%;
+   
 }
 
 .computer {
    font-size: 20px;
    float:left;
    width: 50%;
+   
 }
 
 
@@ -43,12 +75,12 @@ font-size: 40px;
 #player-choice{
     display:inline-block;
     position: relative;
-    right:15%;
+    right:2%;
 }
 #computer-choice{
     display:inline-block;
     position: relative;
-    left:15%;
+    left:2%;
 }
 
 #result {
@@ -59,6 +91,7 @@ font-size: 40px;
     padding: 0%;
     margin: 0%;
     min-width: 30%;
+    font-family: 'Bebas Neue';
 }
 
 #play-again {
@@ -122,13 +155,19 @@ p {
         font-size: 25px;
 
     }
-
-    .choices button{
-        font-size: 20px;
-       display: inline-block;
-        /*text-align: center;*/
-        width: 30%;
+    .choice {
+        margin: 0 10px;
+        padding: 5px;
+        border: 5px solid;
+        width: 50px;
+        height: 50px;
+        font-size: 1.5rem;
     }
+    .choice::after {
+        font-size: 0.6rem;
+        left: -0.7rem;
+    }
+   
     .choices{
         text-align: center;
     }
@@ -139,10 +178,12 @@ p {
     .player {
         width: 100%;
         padding-top: 10px;
+        color: aliceblue;
     }
     .computer {
         width: 100%;
         padding-bottom: 10px;
+        color: aliceblue;
     }
     .player h3{
         margin: 0;
@@ -239,11 +280,7 @@ p {
         font-size: 20px;
 
     }
-/*.choices button{
-     font-size: 15px;
-    display: inline-block;
-     width: 15%;
-}*/
+
 .choices p{
     font-size: 16px;
 }
@@ -257,23 +294,6 @@ p {
     padding: 5px 0;
 }
 
-.player{
-width: 50%;
 }
-.computer{
-    width: 50%;
-}
-}
-/* Medium devices (landscape tablets, 768px and up) */
-/*@media only screen and (orientation: landscape) {
-    .display-img {
 
-        width: 150px;
-        height: 150px;
-    }
-    #result {
-        font-size: 20px;
-        width: 100%;
-        padding: 5px 0;
-    }
-}*/
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Audiowide&family=Bebas+Neue&family=Lato:wght@300&family=Oswald:wght@300&display=swap');
