update play again button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -319,7 +319,9 @@ position: relative;
 }
 
 #play-again {
-    color:aliceblue;
+    color:black;
     display: none;
+    text-align: center;
+    
 }
 
