--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -319,9 +319,14 @@ position: relative;
 }
 
 #play-again {
-    color:black;
+    color:white;
+    font-size: large;
     display: none;
-    text-align: center;
-    
+    width: 170px;
+    height: 70px;
+    margin: auto;
+    border-radius: 15px;
+    border: 2px solid white;
+    background-color: rgb(226, 109, 109);
 }
 
