--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@ body{
     margin: 0px;
     padding: 0px;
     color: aliceblue;
+    
 }
 #myVideo {
     position: fixed;
@@ -11,6 +12,7 @@ body{
     min-width: 100%;
     min-height: 100%;
     z-index: -5;
+    opacity: 0.95;
   }
 
 .container{
@@ -54,6 +56,7 @@ padding-bottom: 50px;
 
 .instructions p {
     font-family: 'lato';
+    
 }
 
 .player{
@@ -127,6 +130,7 @@ p {
     vertical-align: top;
     font-family: 'lato';
     font-size: 19px;
+    
 }
 .rules{
     text-align: center;
@@ -134,6 +138,7 @@ p {
 
 .rules li {
     list-style: none;
+    
 }
 .rules ul {
     padding: 0;
