--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -336,7 +336,18 @@ p {
     font-size: 20px;
     padding: 5px 0;
 }
-
+.choice {
+    margin: 0 6px;
+    padding: 2px;
+    border: 6px solid;
+    width: 50px;
+    height: 50px;
+    font-size: 1.9rem;
+}
+.choice::after {
+    font-size: 0.5rem;
+    left:-0.3rem;
+}
 
 }
 
