--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,6 +218,7 @@ p {
     #computer-choice {
         position: static;
         right: 0;
+        padding-bottom: 10px;
     }
 
     #result{
@@ -252,14 +253,20 @@ p {
     }
     .display-img {
 
-        width: 100px;
-        height: 100px;
+        width: 140px;
+        height: 140px;
     }
 
     #result {
         font-size: 20px;
         width: 100%;
         padding: 5px 0;
+    }
+    #play-again{
+        height:60px;
+        width: 160px;
+        font-size: 15px;
+        padding:5px;
     }
 }
 
@@ -329,8 +336,8 @@ p {
 }
 .display-img {
 
-    width: 120px;
-    height: 120px;
+    width: 150px;
+    height: 150px;
 }
 #result {
     font-size: 20px;
@@ -362,6 +369,12 @@ position: relative;
     .choice::after {
         font-size: 0.6rem;
         left: -0.7rem;
+    }
+
+    #play-again{
+        width: 150px;
+        height: 60px;
+        font-size: 15px;
     }
 }
 
