--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,11 +54,7 @@ padding-bottom: 50px;
     left: -0.5em;
 }
 
-.instructions p {
-    font-family: 'lato';
-    color: white;
-    
-}
+
 
 #play-again {
     color:white;
@@ -157,6 +153,27 @@ p {
 .rules ul {
     padding: 0;
     margin:0;
+    font-weight: bold;
+}
+
+.instruction-block{
+    text-align: center;
+    margin-bottom: 50px;
+    margin-top: 10vh;
+    padding-bottom: 30px;
+    border: 12px solid rgb(92, 58, 8);
+    border-radius: 10px;
+    background-color: rgb(245, 239, 233, 0.8);
+    color: black;
+    
+    
+}
+.instructions p {
+    font-family: 'lato';
+    color: black;
+    font-weight: bold;
+    
+    
 }
 
 /* Media Queries*/
