--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,13 +158,16 @@ p {
 
 .instruction-block{
     text-align: center;
-    margin-bottom: 50px;
-    margin-top: 10vh;
+   /* margin-bottom: 50px;
+    margin-top: 10vh;*/
     padding-bottom: 30px;
     border: 12px solid rgb(92, 58, 8);
     border-radius: 10px;
     background-color: rgb(245, 239, 233, 0.8);
     color: black;
+    width: 50%;
+    margin: 8vh auto 50px;
+    padding-top: 20px;
     
     
 }
