added in meta tag, edited image in css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,8 +132,8 @@ p {
 }
 
 .rules-img img{
-    height: 230px;
-    width: auto;
+    height: auto;
+    width: 270px;
 }
 .rules-child{
     display: inline-block;
